--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -319,4 +319,52 @@
   url    = {https://learn.microsoft.com/en-us/azure/databricks/workflows/},
 }
 
+@Online{Schults2024,
+  author = {Carlos Schults},
+  date   = {2024-05-27},
+  editor = {Carlos Schults},
+  title  = {What Is Infrastructure as Code? How It Works, Best Practices, Tutorials},
+  url    = {https://stackify.com/what-is-infrastructure-as-code-how-it-works-best-practices-tutorials/},
+}
+
+@Online{Azure2023,
+  author = {Azure},
+  date   = {2023-06-23},
+  editor = {Azure},
+  title  = {What are ARM templates?},
+  url    = {https://learn.microsoft.com/en-us/azure/azure-resource-manager/templates/overview},
+}
+
+@Online{Microsoft2024i,
+  author = {Microsoft},
+  date   = {2024-05-14},
+  editor = {Microsoft},
+  title  = {What is Microsoft Fabric?},
+  url    = {https://learn.microsoft.com/en-us/fabric/get-started/microsoft-fabric-overview},
+}
+
+@Online{Pykes2023,
+  author = {Kurtis Pykes},
+  date   = {2023-12-01},
+  editor = {Kurtis Pykes},
+  title  = {What is Microsoft Fabric?},
+  url    = {https://www.datacamp.com/blog/what-is-microsoft-fabric},
+}
+
+@Online{Microsoft2024j,
+  author = {Microsoft},
+  date   = {2024-01-10},
+  editor = {Microsoft},
+  title  = {Wat is Azure Synapse Analytics?},
+  url    = {https://learn.microsoft.com/nl-nl/azure/synapse-analytics/overview-what-is},
+}
+
+@Online{Gaikwad2023,
+  author = {Manjiri Gaikwad},
+  date   = {2023-03-31},
+  editor = {Manjiri Gaikwad},
+  title  = {Azure Synapse vs Data Factory: 4 Major Differences},
+  url    = {https://hevodata.com/learn/azure-synapse-vs-data-factory/#:~:text=Synapse allows you to collect,should embrace Azure Data Factory.},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
