--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -5,32 +5,40 @@
 \chapter{\IfLanguageName{dutch}{Inleiding}{Introduction}}%
 \label{ch:inleiding}
 
-De inleiding moet de lezer net genoeg informatie verschaffen om het onderwerp te begrijpen en in te zien waarom de onderzoeksvraag de moeite waard is om te onderzoeken. In de inleiding ga je literatuurverwijzingen beperken, zodat de tekst vlot leesbaar blijft. Je kan de inleiding verder onderverdelen in secties als dit de tekst verduidelijkt. Zaken die aan bod kunnen komen in de inleiding~\autocite{Pollefliet2011}:
-
-\begin{itemize}
-  \item context, achtergrond
-  \item afbakenen van het onderwerp
-  \item verantwoording van het onderwerp, methodologie
-  \item probleemstelling
-  \item onderzoeksdoelstelling
-  \item onderzoeksvraag
-  \item \ldots
-\end{itemize}
+%De inleiding moet de lezer net genoeg informatie verschaffen om het onderwerp te begrijpen en in te zien waarom de onderzoeksvraag de moeite waard is om te onderzoeken. In de inleiding ga je literatuurverwijzingen beperken, zodat de tekst vlot leesbaar blijft. Je kan de inleiding verder onderverdelen in secties als dit de tekst verduidelijkt. Zaken die aan bod kunnen komen in de inleiding~\autocite{Pollefliet2011}:
+%
+%\begin{itemize}
+%  \item context, achtergrond
+%  \item afbakenen van het onderwerp
+%  \item verantwoording van het onderwerp, methodologie
+%  \item probleemstelling
+%  \item onderzoeksdoelstelling
+%  \item onderzoeksvraag
+%  \item \ldots
+%\end{itemize}
 
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}%
 \label{sec:probleemstelling}
 
-Uit je probleemstelling moet duidelijk zijn dat je onderzoek een meerwaarde heeft voor een concrete doelgroep. De doelgroep moet goed gedefinieerd en afgelijnd zijn. Doelgroepen als ``bedrijven,'' ``KMO's'', systeembeheerders, enz.~zijn nog te vaag. Als je een lijstje kan maken van de personen/organisaties die een meerwaarde zullen vinden in deze bachelorproef (dit is eigenlijk je steekproefkader), dan is dat een indicatie dat de doelgroep goed gedefinieerd is. Dit kan een enkel bedrijf zijn of zelfs één persoon (je co-promotor/opdrachtgever).
+Net IT, een bedrijf gespecialiseerd in CRM-toepassingen met Microsoft Dynamics 365 en intelligente bedrijfstoepassingen op het Microsoft Power Platform, heeft dagelijks te maken met grote hoeveelheden data. Ze proberen steeds toonaangevend te worden en te blijven door hun bedrijf te versterken door middel van optimalisatie, digitalisering en automatisering van bedrijfsprocessen, met behulp van bewezen technologie. Het proces van data-extractie, -transformatie en -laden (ETL) vormt dan ook een grote rol binnen het bedrijf. Doordat Net IT een Microsoft Gold Partner is, waarbij elke consultant Microsoft Certified is, is het dan ook logisch dat er enkel Microsoft producten gebruikt worden. Voor het implementeren van ETL's binnen Net IT wordt er dus gebruik gemaakt van Microsoft Azure. Microsoft Azure biedt verschillende tools voor gegevensverwerking, zoals bijvoorbeeld Azure Data Factory, Azure Databricks, Azure Synapse Analytics en Microsoft Fabric. Momenteel maakt Net IT gebruik van Azure Data Factory voor het implementeren van ETL-processen. Ze willen specifiek weten of Azure Databricks performanter, goedkoper en sneller te implementeren is.
+
+%In de huidige data-gedreven wereld is het efficiënt verwerken van grote hoeveelheden data van cruciaal belang voor bedrijven. Het proces van data-extractie, -transformatie en -laden (ETL) vormt de kern van data-integratie en -analyse. Met de opkomst van cloudcomputing biedt Microsoft Azure een scala aan tools voor gegevensverwerking, waaronder Azure Data Factory en Azure Databricks. Echter is het vaak onduidelijk welke tool het beste geschikt is voor specifieke ETL-scenario's. Dit gebrek aan duidelijkheid kan leiden tot inefficiënte processen, hogere kosten en suboptimale prestaties.
+
+%Uit je probleemstelling moet duidelijk zijn dat je onderzoek een meerwaarde heeft voor een concrete doelgroep. De doelgroep moet goed gedefinieerd en afgelijnd zijn. Doelgroepen als ``bedrijven,'' ``KMO's'', systeembeheerders, enz.~zijn nog te vaag. Als je een lijstje kan maken van de personen/organisaties die een meerwaarde zullen vinden in deze bachelorproef (dit is eigenlijk je steekproefkader), dan is dat een indicatie dat de doelgroep goed gedefinieerd is. Dit kan een enkel bedrijf zijn of zelfs één persoon (je co-promotor/opdrachtgever).
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
 \label{sec:onderzoeksvraag}
 
-Wees zo concreet mogelijk bij het formuleren van je onderzoeksvraag. Een onderzoeksvraag is trouwens iets waar nog niemand op dit moment een antwoord heeft (voor zover je kan nagaan). Het opzoeken van bestaande informatie (bv. ``welke tools bestaan er voor deze toepassing?'') is dus geen onderzoeksvraag. Je kan de onderzoeksvraag verder specifiëren in deelvragen. Bv.~als je onderzoek gaat over performantiemetingen, dan 
+De centrale vraag van deze bachelorproef luidt: "Hoe kunnen Azure Data Factory en Azure Databricks optimaal worden ingezet voor ETL-processen binnen Net IT, en welke van deze twee tools biedt de beste prestaties en gebruiksgemak voor de specifieke use case van het bedrijf?"
+
+%Wees zo concreet mogelijk bij het formuleren van je onderzoeksvraag. Een onderzoeksvraag is trouwens iets waar nog niemand op dit moment een antwoord heeft (voor zover je kan nagaan). Het opzoeken van bestaande informatie (bv. ``welke tools bestaan er voor deze toepassing?'') is dus geen onderzoeksvraag. Je kan de onderzoeksvraag verder specifiëren in deelvragen. Bv.~als je onderzoek gaat over performantiemetingen, dan 
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}%
 \label{sec:onderzoeksdoelstelling}
 
-Wat is het beoogde resultaat van je bachelorproef? Wat zijn de criteria voor succes? Beschrijf die zo concreet mogelijk. Gaat het bv.\ om een proof-of-concept, een prototype, een verslag met aanbevelingen, een vergelijkende studie, enz.
+De doelstelling van dit onderzoek is om een grondige vergelijkende analyse uit te voeren tussen Azure Data Factory en Azure Databricks met betrekking tot hun inzetbaarheid voor de ETL-processen van Net IT. Dit onderzoek beoogt praktische aanbevelingen te formuleren voor Net IT. Dit zal het bedrijf in staat stellen om een beslissing te nemen over welke tool het beste past bij hun behoeften en om hun gegevensverwerking en bedrijfsprocessen te optimaliseren. De vergelijkende analyse zal uitgevoerd worden door het ontwikkelen van een proof-of-concept in zowel Azure Data Factory als Azure Databricks en deze te gaan vergelijken. Deze proof-of-concepts zijn ETL-processen die specifiek bij de klant gebruikt kunnen worden. Op basis hier van kan er dan gekeken worden of het de moeite is om over te stappen op Azure Databricks. 
+
+%Wat is het beoogde resultaat van je bachelorproef? Wat zijn de criteria voor succes? Beschrijf die zo concreet mogelijk. Gaat het bv.\ om een proof-of-concept, een prototype, een verslag met aanbevelingen, een vergelijkende studie, enz.
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}%
 \label{sec:opzet-bachelorproef}
@@ -39,12 +47,26 @@ Wat is het beoogde resultaat van je bachelorproef? Wat zijn de criteria voor suc
 % geven van de opbouw van de rest van de tekst. Deze sectie bevat al een aanzet
 % die je kan aanvullen/aanpassen in functie van je eigen tekst.
 
-De rest van deze bachelorproef is als volgt opgebouwd:
+%De rest van deze bachelorproef is als volgt opgebouwd:
+%
+%In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie.
+%
+%In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
+%
+%% TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
+%
+%In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
+
+De bachelorproef is opgebouwd uit volgende onderdelen:
 
 In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie.
 
-In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen.
+In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvraag.
 
-% TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
+In Hoofdstuk~\ref{ch:vergelijkingscriteria} worden vergelijkingscriteria opgesteld die nodig zullen zijn om de proof-of-concepts te gaan vergelijken.
+
+In Hoofdstuk~\ref{ch:proof-of-concepts} worden de proof-of-concepts uitgewerkt.
+
+In Hoofdstuk~\ref{ch:uitvoeren} worden de geïmplementeerde proof-of-concepts uitgevoerd om zo kosten en performantie te berekenen.
 
 In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
