--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -28,7 +28,9 @@
 
 \section{Literatuuronderzoek}
 
-In het literatuuronderzoek zijn we in detail op zoek gegaan naar de mogelijkheden die er zijn om ETL's te gaan implementeren. Hierbij houden we rekening dat Net IT met Microsoft producten werkt waardoor er vooral naar Azure gekeken wordt. Er is dus ook verder in detail gegaan op Azure Data Factory en Azure Databricks doordat deze verder onderzocht worden. Ten slotte is er ook in detail gegaan op andere Azure services. Dit komt doordat we deze gebruiken in de proof-of-concepts.
+In het literatuuronderzoek is er in detail op zoek gegaan naar de mogelijkheden die er zijn om ETL's te gaan implementeren. Hierbij houden we rekening dat Net IT met Microsoft producten werkt waardoor er vooral naar Azure gekeken wordt. Er is dus ook verder in detail gegaan op Azure Data Factory, Azure Databricks, Azure Synapse Analytics en Microsoft Fabric. Ten slotte is er ook in detail gegaan op andere Azure services. Dit komt doordat we deze gebruiken in de proof-of-concepts.\\
+
+Verder in de bachelorproef zal enkel Azure Data Factory en Azure Databricks vergeleken worden. Dit doordat vanuit Net IT gevraagd was om deze twee te vergelijken. Daarnaast wordt voor data integraties en het implementeren van ETL's en ELT's in Azure Synapse Analytics gebruik gemaakt van Azure Data Factory integraties. Ten slotte is er ook Microsoft Fabric. Doordat dit een platform is dat verschillende Azure tools en services samen brengt zoals bijvoorbeeld Azure Data Factory en Azure Synapse Analytics wordt deze niet meegerekend in de vergelijkende studie.
 
 \section{Vergelijkingscriteria}
 
@@ -36,17 +38,17 @@ Er zullen vergelijkingscriteria opgesteld worden om zo de prestaties van zowel A
 
 \section{Proof-of-concepts}
 
-Binnen Net IT wordt data van Microsoft 365 Customer Engagement geëxporteerd naar CSV bestanden en in Azure Data Lake geplaatst. Deze bestanden moeten minstens één keer per dag opgesplitst worden per groep per jaar en zullen moeten doorgestuurd worden naar de klant. Hiervoor moet er dus een ETL geïmplementeerd worden. Doordat er onderzocht wordt naar wat de beste mogelijkheid is voor het implementeren van deze ETL zal er dus een proof-of-concept uitgewerkt worden voor zowel Azure Data Factory en Azure Databricks. Voor het implementeren van deze proof-of-concepts zal er een pipeline gemaakt worden die ook bij de klant gebruikt wordt. Belangrijk hierbij is dat er voor deze bachelorproef gebruik gemaakt wordt van dummy data. \\
+Binnen Net IT wordt data van Microsoft 365 Customer Engagement geëxporteerd naar CSV bestanden en in Azure Data Lake geplaatst. Deze bestanden moeten minstens één keer per dag opgesplitst worden per groep per jaar en zullen moeten doorgestuurd worden naar de klant. Hiervoor moet er dus een ETL geïmplementeerd worden. Doordat er onderzocht wordt naar wat de beste mogelijkheid is voor het implementeren van deze ETL zal er dus een proof-of-concept uitgewerkt worden voor zowel Azure Data Factory en Azure Databricks. Voor het implementeren van deze proof-of-concepts zal er een pipeline gemaakt worden die ook bij de klant gebruikt wordt. De proof-of-concepts maken dus gebruik van data die ook bij de klant wordt gebruikt. Belangrijk hierbij is dat om privacyredenen deze data geanonimiseerd is. \\
     
 
-De tabellen uit data lake die gebruikt worden zijn ``new\_syndicalpremiumrequest'', ``new\_person'', ``new\_bankaccount'', ``new\_year'', ``new\_membership'', ``new\_group'' en ``new\_organizationyear''. Voor zowel Data Factory als Databricks wordt er eerst gekeken naar hoe deze opgezet kunnen worden. Vervolgens wordt er gekeken hoe er samen gewerkt kan worden en hoe source control geïmplementeerd kan worden. Ook gaan we kijken of deze kunnen geïntegreerd worden in bepaalde IDE's en of Infrastructure as Code gebruikt kan worden. Daarnaast wordt er ook gekeken hoe men data kan ophalen uit data lake met behulp van het Common Data Model en wordt er gekeken hoe de pipeline gedebugged kan worden. Vervolgens worden de belangrijkste transformaties van de pipeline overlopen. En ten slotte wordt er getoond hoe de data terug naar Azure Data Lake geschreven wordt. Op deze manier kan Data Factory en Databricks makkelijk vergeleken worden. Belangrijk is ook dat er getoond wordt hoe de output van beide pipelines met elkaar vergeleken kan worden om te valideren dat de output hetzelfde is.\\
+De tabellen uit data lake die gebruikt worden zijn ``new\_syndicalpremiumrequest'', ``new\_person'', ``new\_bankaccount'', ``new\_year'', ``new\_membership'', ``new\_group'' en ``new\_organizationyear''. Voor zowel Data Factory als Databricks wordt er eerst gekeken naar hoe deze opgezet kunnen worden. Vervolgens wordt er gekeken hoe er samen gewerkt kan worden en hoe source control geïmplementeerd kan worden. Ook gaan we kijken of deze kunnen geïntegreerd worden in bepaalde IDE's. Daarnaast wordt er ook gekeken hoe men data kan ophalen uit data lake met behulp van het Common Data Model. Vervolgens worden de belangrijkste transformaties van de pipeline overlopen. En ten slotte wordt er getoond hoe de data terug naar Azure Data Lake geschreven wordt. Op deze manier kan Data Factory en Databricks makkelijk vergeleken worden. Belangrijk is ook dat er getoond wordt hoe de output van beide pipelines met elkaar vergeleken kan worden om te valideren dat de output hetzelfde is.\\
     
 
-Er wordt steeds gewerkt vanuit de tabel ``new\_syndicalpremiumrequest''. Dit zijn de premies die geëxporteerd worden vanuit Microsoft 365 Customer Engagement. Deze premies worden opgesplitst per groep, per jaar. Voor de huidige proof-of-concepts worden deze premies naar slechts één CSV bestand geëxporteerd. Dit zodat het geëxporteerde CSV bestand van Data Factory dan makkelijk vergeleken kan worden met het geëxporteerde CSV bestand van Databricks. Het resultaat van de ETL is dus een CSV bestand waarbij elke rij een premie is, hierbij heeft elke premie een groep en referentiejaar.
+Er wordt steeds gewerkt vanuit de tabel ``new\_syndicalpremiumrequest''. Dit zijn de premies die geëxporteerd worden vanuit Microsoft 365 Customer Engagement. Deze premies worden opgesplitst per groep, per jaar. Voor de huidige proof-of-concepts worden deze premies naar slechts één CSV bestand geëxporteerd. Dit zodat het geëxporteerde CSV bestand van Data Factory dan vergeleken kan worden met het geëxporteerde CSV bestand van Databricks. Het resultaat van de ETL is dus een CSV bestand waarbij elke rij een premie is, hierbij heeft elke premie een groep en referentiejaar.
 
 \section{Uitvoeren van pipelines en verzamelen van resultaten}
 
-In dit deel zal er een testopstelling opgezet worden voor beide pipelines voor het verkrijgen van meetbare vergelijkingscriteria. Aan de hand van de resulterende data zullen grafieken opgesteld worden en interpretaties van deze grafieken genoteerd worden.
+In dit deel zal er een testopstelling opgezet worden voor beide pipelines voor het verkrijgen van meetbare vergelijkingscriteria. Aan de hand van de resulterende data zullen grafieken opgesteld worden en interpretaties van deze grafieken genoteerd worden. Daarnaast zullen ook ondervindingen voor de andere vergelijkingscriteria genoteerd worden.
 
 \section{Conclusie}
 
