--- a/bachproef/vergelijkingscriteria.tex
+++ b/bachproef/vergelijkingscriteria.tex
@@ -1,7 +1,7 @@
 \chapter{Vergelijkingscriteria}%
 \label{ch:vergelijkingscriteria}
 
-\section{Makkelijk meetbaar}
+\section{Niet-functioneel}
 
 \begin{itemize}
     \item Kostprijs
@@ -10,16 +10,12 @@
 
 Kostprijs en performantie zijn makkelijk meetbaar door de twee pipelines uit te voeren. De data is vergelijkbaar met elkaar dus aan de hand van grafieken kan er gekeken worden welke optie bijvoorbeeld het goedkoopst of snelst is. 
 
-\section{Verschillen aantoonbaar aan de hand van een voorbeeld}
+\section{Functioneel}
 
 \begin{itemize}
     \item Mogelijkheid tot debuggen
     \item Source control
-    \item ARM templates
+    \item Infrastructure as Code (IaC)
 \end{itemize}
 
-Bovenstaande vergelijkingscriteria zijn minder makkelijk meetbaar maar kunnen wel aan de hand van een voorbeeld vergeleken worden. Conclusies trekken op basis van deze vergelijkingscriteria zal waarschijnlijk moeilijker zijn tenzij er een groot verschil tussen de twee zou zijn.
-
-\section{Eigen ervaring}
-
-Ten slotte is eigen ervaring ook zeer belangrijk. Dit kan helpen bij het begrijpen van subjectieve aspecten zoals bijvoorbeeld gebruiksgemak, esthetiek en gebruikerservaring. Ook is het belangrijk om te begrijpen waarom mijn voorkeur naar een bepaalde technologie zou gaan.
+Bovenstaande functionele vergelijkingscriteria zijn moeilijker te kwantificeren. Toch zijn deze belangrijk om te vergelijken zodat er een keuze gemaakt kan worden tussen Azure Data Factory en Azure Databricks. Er gaat dus gekeken worden welke mogelijkheden beide tools hebben om te debuggen, gebruik te maken van source control en gebruik te maken van Infrastructure as Code (IaC). 
