--- a/bachproef/voorwoord.tex
+++ b/bachproef/voorwoord.tex
@@ -11,4 +11,16 @@
 %% waarom jij het onderwerp wil bespreken.
 %% Vergeet ook niet te bedanken wie je geholpen/gesteund/... heeft
 
-\lipsum[1-2]
+Drie jaar geleden studeerde ik af in de richting Informatica op Atheneum Oudenaarde in het middelbaar. Dankzij de kennis die ik toen heb meegekregen in combinatie met mijn interesse in Informatica heb ik tijdens mijn studies aan HoGent elke zomer vakantiewerk kunnen doen bij Net IT. Voor deze scriptie, geschreven in het kader van het voltooien van de opleiding Toegepaste Informatica heb ik dus Net IT gecontacteerd. Koen Van Damme, CRM Consultant bij Net IT, heeft mij dan dit onderwerp aangereikt en het co-promotorschap op zich genomen. Ik heb altijd al een interesse gehad in cloud technologieën. Voor mij was dit dus een enorm interessant onderwerp. Het was zeker ook uitdagend aangezien ik zelf development heb gestudeerd en big data redelijk nieuw was voor mij.\\
+
+Ik wil mijn oprechte dank uitspreken aan de volgende personen. Zonder hun hulp, inzet, tijd en nog veel meer, zou het realiseren van deze bachelorproef niet mogelijk zijn geweest.\\
+
+Als eerst wil ik mijn co-promotor, Koen Van Damme, bedanken om mij dit onderwerp aan te reiken. Hij heeft mij de nodige informatie gegeven om te kunnen starten aan deze bachelorproef. Daarnaast kon ik steeds met vragen terecht bij hem en kon ik de nodige feedback vragen. Dit via Microsoft Teams of op kantoor.\\
+
+Als tweede wil ik mijn promotor, Gerjan Bosteels, bedanken om mij te helpen bij het uitwerken van deze bachelorproef. Ik kreeg regelmatig uitgebreide feedback die mij steeds de juiste richting stuurde. Dit maakte mij ook gemotiveerd om steeds verder te werken en vragen te stellen.\\
+
+Ten slotte wil ik mijn familie en vrienden bedanken voor hun steun gedurende het uitwerken van mijn bachelorproef.\\
+
+Ik wens u een leuke en boeiende leeservaring toe.\\
+
+Loeka Lievens
